--- a/bnutils.sty
+++ b/bnutils.sty
@@ -1,4 +1,4 @@
-\ProvidesPackage{bnutils}[2015/09/20 1.53 put any packages you would like to use here]
+\ProvidesPackage{bnutils}[2016/4/10  1.54 put any packages you would like to use here]
 
 % 处理数学公式中的黑斜体的宏包
 %\RequirePackage{bm}
@@ -20,6 +20,10 @@
 
 % 固定宽度的表格
 \RequirePackage{tabularx}
+
+% 支持横排页面
+\RequirePackage{lscape}
+
 
 % 确定浮动对象的位置，可以使用~H，强制将浮动对象放到这里（可能效果很差）
 \RequirePackage{float}
