--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -45,14 +45,14 @@
 }
 
 @incollection{NIPS2012_4824,
-title = {ImageNet Classification with Deep Convolutional Neural Networks},
-author = {Alex Krizhevsky and Sutskever, Ilya and Hinton, Geoffrey E},
-booktitle = {Advances in Neural Information Processing Systems 25},
-editor = {F. Pereira and C. J. C. Burges and L. Bottou and K. Q. Weinberger},
-pages = {1097--1105},
-year = {2012},
-publisher = {Curran Associates, Inc.},
-url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf}
+  title = {ImageNet Classification with Deep Convolutional Neural Networks},
+  author = {Alex Krizhevsky and Sutskever, Ilya and Hinton, Geoffrey E},
+  booktitle = {Advances in Neural Information Processing Systems 25},
+  editor = {F. Pereira and C. J. C. Burges and L. Bottou and K. Q. Weinberger},
+  pages = {1097--1105},
+  year = {2012},
+  publisher = {Curran Associates, Inc.},
+  url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf}
 }
 
 @article{hinton2006fast,
@@ -683,4 +683,11 @@ url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convol
   pages={19--67},
   year={2005},
   publisher={Springer}
+}
+
+@article{kingma2014adam,
+  title={Adam: A method for stochastic optimization},
+  author={Kingma, Diederik P and Ba, Jimmy},
+  journal={arXiv preprint arXiv:1412.6980},
+  year={2014}
 }
