--- a/data/chap05.tex
+++ b/data/chap05.tex
@@ -4,7 +4,7 @@
 %%% TeX-master: t
 %%% End:
 
-\chapter{第五章}
+\chapter{总结与展望}
 \label{cha:chap05}
 
 
@@ -16,11 +16,11 @@
   唐代古文运动领袖，与柳宗元合称韩柳。诗力求险怪新奇，雄浑重气势。}
 
 
-\section{封面相关}
+\section{本文的主要内容}
 封面的例子请参看 cover.tex。主要符号表参看 denation.tex，附录和个人简历分别参看 appendix01.tex
 和 resume.tex。里面的命令都非常简单，一看即会。\footnote{你说还是看不懂？怎么会呢？}
 
-\section{字体命令}
+\section{未来的期望}
 \label{sec:first}
 
 苏轼（1037-1101），北宋文学家、书画家。字子瞻，号东坡居士，眉州眉山（今属四川）人
