--- a/data/chap03.tex
+++ b/data/chap03.tex
@@ -15,7 +15,7 @@
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=0.9\textwidth]{compare_distribution}
+    \includegraphics[width=0.9\textwidth]{figures/compare_distribution}
     \caption{区间值相同但分布不同的数据比较}
     \label{fig:compare_distribution}
 \end{figure}
@@ -33,7 +33,7 @@
 三角形模糊集值数据由以下三个关键参数组成：$(a^-,0)$，$(a^m,1)$ 和 $(a^+,0)$。如图~\ref{fig:tfs} 所示，  几何上，$(a^-,0)$ 和 $(a^+,0)$ 组成三角形MF的下边缘；代数上，$(a^-,0)$ 和 $(a^+,0)$ 形成一个区间值，确保一定的变化范围。$(a^m,1)$是TFSV 数据的顶点，表征 FS 的最高置信度。
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=0.5\textwidth]{tfs}
+    \includegraphics[width=0.5\textwidth]{figures/tfs}
     \caption{三角形模糊集 $\tilde{A}$ 示意图}
     \label{fig:tfs}
 \end{figure}
@@ -95,7 +95,7 @@
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=0.9\textwidth]{set_location}
+    \includegraphics[width=0.9\textwidth]{figures/set_location}
     \caption{$\tilde{A}$ 和 $\tilde{B}$ 位置关系示意图。 (a)相交; (b)$\tilde{A}$ 包含集合$\tilde{B}$;  (c)不相交.}
     \label{fig:set_location}
 \end{figure}
@@ -104,7 +104,7 @@
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=0.9\textwidth]{distance_compare}
+    \includegraphics[width=0.9\textwidth]{figures/distance_compare}
     \caption{不同位置下，$\tilde{A}$ 和 $\tilde{B}$ 两者间各种距离比较图。}
     \label{fig:distance_compare}
 \end{figure}
@@ -160,7 +160,7 @@
 
 \begin{figure}[htb]
     \centering
-    \includegraphics[width=1.0\textwidth]{framework}
+    \includegraphics[width=1.0\textwidth]{figures/framework}
     \caption{面向对象的改进型区间二型模糊遥感影像聚类算法框架图}
     \label{fig:framework}
 \end{figure}
@@ -294,12 +294,11 @@ $\tilde{X_i}$ 和$\tilde{V_{i}}$ 的区间值距离$d_{I} (\tilde{X_i}, \tilde{V
     \end{split}
 \end{equation}
 
-\begin{figure}[htbp]
+\begin{figure}[htb]
     \centering
-    \includegraphics[width=0.8\textwidth]{tfsvit2}
-    \caption{TFSV-IT2FCM 算法流程图}
-    \label{fig:tfsvit2}
-\end{figure}
+    \includegraphics[width=0.8\textwidth]{figures/tfsvit2}
+    \caption{TFSV-IT2FCM 算法流程图}\label{fig:tfsvit2}
+  \end{figure}
 
 整个TFSV-IT2FCM 算法框架如图~\ref{fig:tfsvit2} 所示, 算法的详细描述如下：
 \begin{enumerate}[(1)]
