--- a/data/chap05.tex
+++ b/data/chap05.tex
@@ -17,10 +17,11 @@
 
 
 \section{本文的主要内容}
+\label{sec:5-1}
 封面的例子请参看 cover.tex。主要符号表参看 denation.tex，附录和个人简历分别参看 appendix01.tex
 和 resume.tex。里面的命令都非常简单，一看即会。\footnote{你说还是看不懂？怎么会呢？}
 
 \section{未来的期望}
-\label{sec:first}
+\label{sec:5-2}
 
 苏轼（1037-1101），北宋文学家、书画家。字子瞻，号东坡居士，眉州眉山（今属四川）人
