--- a/main.tex
+++ b/main.tex
@@ -47,7 +47,7 @@
 \mainmatter
 \include{data/chap01}
 \include{data/chap02}
-%\include{data/chap03}
+\include{data/chap03}
  \include{data/chap04}
 \include{data/chap05}
 
