添加实验结果

--- a/data/chap04.tex
+++ b/data/chap04.tex
@@ -309,16 +309,9 @@ Vaihingen 影像数据集各通道的像素点取值在$[0,255]$ 范围内，像
 \subsection{结果与分析}
 \label{sec:third-3}
 
-本章提出的方法是将全卷积分割方法与条件生成对抗网络模型结果，利用CGAN 模型优秀的生成能力获得更精细、准确的地物分割边界，实验中采用的是融合DSM 数据的四波段影像数据，参考的实验方法为经典的FCN 语义分割方法。表\ref{tab:seg_refult} 展示了文中提出的基于CGAN 的分割方法和FCN 分割方法的分割精度，分别统计了地面、低矮植被、树木、建筑物、车辆五类地物（背景未计算）的分割精度，整幅图片中五类地物总体精度和MIoU 指标。从分类精度可知，两种方法对地面、树木和建筑物均有较好的识别精度，低矮植被易与背景中阴影混淆，故整体识别精度较低，车辆分类精度也不高，这与样本中车辆所占像素面积少，存在该类别样本数不多相关。文中提出的基于CGAN 的分割方法在“建筑物”这个类别地物识别精度最高，为 $87.64\%$ ，相比FCN 分割方法的$83.96\%$ ，有近$4\%$ 的绝对精度提升。而对FCN 分割中精度较低的“低矮植被”地物，分割精度由$63.39\%$ 大幅提升到$74.47\%$，提升原因一方面是方法中使用DSM 波段数据能量化区分低矮植被与阴影的高度特征差异，较好得区分二者，另一方面则是基于CGAN 的分割方法对地物的边界有更准确的生成能力。
+本章提出的方法是将全卷积分割方法与条件生成对抗网络模型结果，利用CGAN 模型优秀的生成能力获得更精细、准确的地物分割边界，实验中采用的是融合DSM 数据的四波段影像数据，参考的实验方法为经典的FCN 语义分割方法。下面分别从精确量化和目视评估两个角度对Vaihingen 数据集上的地物分割识别结果进行比较。
 
-图\ref{fig:seg_result} 为本文提出的基于CGAN 的分割方法和FCN 分割方法分别在三组测试图像上分割的可视化结果。
-
-\begin{figure}[htb]
-  \centering
-  \includegraphics[width=0.9\textwidth]{figures/seg_result}
-  \caption{影像分割的可视化结果}\label{fig:seg_result}
-\end{figure}
-
+表\ref{tab:seg_refult} 展示了文中提出的基于CGAN 的分割方法和FCN 分割方法的分割精度，分别统计了地面、低矮植被、树木、建筑物、车辆五类地物（背景未计算）的分割精度，整幅图片中五类地物总体精度和MIoU 指标。从分类精度可知，两种方法对地面、树木和建筑物均有较好的识别精度，低矮植被易与背景中阴影混淆，故整体识别精度较低，车辆分类精度也不高，这与样本中车辆所占像素面积少，存在该类别样本数不多相关。文中提出的基于CGAN 的分割方法在“建筑物”这个类别地物识别精度最高，为 $87.64\%$ ，相比FCN 分割方法的$83.96\%$ ，有约$4\%$ 的绝对精度提升。而对FCN 分割中精度较低的“低矮植被”地物，分割精度由$63.39\%$ 大幅提升到$74.47\%$，该类别识别精度提升幅度达$10\%$，提升原因一方面是方法中使用DSM 波段数据能量化区分低矮植被与阴影的高度特征差异，较好得区分二者，另一方面则是基于CGAN 的分割方法对地物的边界有更准确的生成能力。本文提出基于CGAN 的分割方法OA 为$80.15\%$，MIoU 为$61.83\%$，相比FCN 分割算法中$78.48\%$ 的OA 和$58.42\%$ 的MIoU， 均有一定程度的提升。
 
 \begin{table}[htbp]
   \caption{Vaihingen 数据分割精度评估表}\label{tab:seg_refult}
@@ -333,6 +326,14 @@ Vaihingen 影像数据集各通道的像素点取值在$[0,255]$ 范围内，像
   \end{tabular}
 \end{table}
 
+\begin{figure}[htb]
+  \centering
+  \includegraphics[width=0.9\textwidth]{figures/seg_result}
+  \caption{影像分割的可视化结果}\label{fig:seg_result}
+\end{figure}
+
+
+图\ref{fig:seg_result} 为本文提出的基于CGAN 的分割方法和FCN 分割方法分别在三组测试图像上分割的可视化结果。图\ref{fig:seg_result}(a) 为一居民住宅区，参照真实地物类别的Ground truth 图，相比FCN 分割方法，基于CGAN 的分割方法在处理图中建筑物与房屋阴影的分割边界时，能更好地将阴影划分到背景中，更加准确地将住宅等建筑物识别为一个整体，从易混淆的阴影中区分开。图\ref{fig:seg_result}(b) 则是一处停车场周边影像图，对形态不一、位置各异的车辆进行识别预测是关键。如左下角部分停靠在树木下的两排车辆，一些车辆与地面特征相似，区分度较小，FCN 分割算法无法识别出这些“车辆”，直接将车错分为背景，而基于CGAN 的分割方法则对停靠的车辆尽可能准确的进行了识别预测。相比前者，尽可能地找出了停靠在树木阴影下的车辆。图\ref{fig:seg_result}(c) 为一处树木与建筑物环绕区域，对“建筑物”、“低矮植被”以及“树木”三类地物的边界明确划分成为预测分割的难点。如图正上方区域房屋环绕的树木与低矮植被区域，基于CGAN 的分割方法将图中的“树木”与“低矮植被”进行了区分，而FCN 的分割方法则将“低矮植被”识别为“树木”。综合上面三组图像的分割结果，文中提出的基于CGAN 的分割方法相比FCN 分割方法能够区分特征相近地物类别，生成更准确的分割边界。
 
 \begin{figure}[htb]
   \centering
@@ -340,6 +341,20 @@ Vaihingen 影像数据集各通道的像素点取值在$[0,255]$ 范围内，像
   \caption{DSM 波段对影像分类结果的影响}\label{fig:dsm_affect}
 \end{figure}
 
+文中使用的训练样本为三波段正射影像与一波段DSM 的融合数据。下文实验比较了DSM 数据对实验结果的影响。DSM 数据包含地形起伏和地物高度相关的高程信息，“道路”、“低矮植被”和“建筑物”容易受不同地形、高度变化导致地物的特征起伏变化打，融合DSM 特征后更利于区分这些地物。图\ref{fig:dsm_affect} 中比较了正射影像是否融合DSM 数据对分割结果的影响。如图中红框区域为“建筑物”与“地面阴影”交叉部分，没有DSM 高程数据的分割模型中，将部分“阴影”了别错分为“树木”类别，同时，“建筑物”类别的边界也不完整。融合影像输入数据的分割结果则较好地解决了受高度特征影响的地物错分问题，尽可能保证“建筑物”边界的明确和完整。表\ref{tab:dsm_affect} 则统计了有无DSM 波段的数据源对实验分割精度的影响，通过对五类地物的分类精度、OA和MIoU 指标的对比，我实验返现输入数据加入DSM 波段后，“低矮植被”的分类精度提升最大，相比初始的$72.68\%$ 提升了$1.72\%$，达到$82.40\%$。整体的分类精度也由$79.52\%$ 提升到$80.15\%$。因此，融合DSM 高程信息数据能得到更优秀的分割精度和分割效果。
+
+\begin{table}[htbp]
+  \caption{DSM 波段对分割精度的影响}\label{tab:dsm_affect}
+  \centering
+  \begin{tabular}{ccccccccc}
+    \toprule
+   数据源             & 地面 & 低矮植被 & 树木 & 建筑物 & 车辆 & OA & MIoU \\
+    \midrule
+    正射影像     & $83.27\%$ & $72.68\%$ & $82.61\%$ & $86.33\%$ & $78.20\%$   & $79.52\%$ & $60.96\%$ \\
+    正射影像+DSM & $83.78\%$ & $74.47\%$ & $82.40\%$ & $87.64\%$ & $78.83\%$ & $80.15\%$ & \textbf{$61.83\%$} \\
+    \bottomrule
+  \end{tabular}
+\end{table}
 
 \section{本章小结}
 \label{sec:forth}
