--- a/data/chap01.tex
+++ b/data/chap01.tex
@@ -39,7 +39,7 @@
 
 \subsection{基于深度学习技术影像识别与分类研究现状}
 \label{subsec:1-2-2}
-深度学习的概念源于人工神经网络，最早由 Geoffrey Hinton \cite{hinton2006fast} 教授于2006年提出。深度学习通过组合低层特征形成更加抽象的高层表示属性类别或特征，从大量数据中自动学习数据的特征表示。深度学习利用多层网络模型学习抽象概念完成自我学习 \cite{lecun2015deep}。 深度学习最早应用于图像处理领域，目前在自然语言处理语、音识别、搜索推荐、游戏AI 和自动驾驶等领域广泛应用，且均表现出卓越的效果 \cite{bengio2009learning}。2012 年，Alex 等人在ILSVRC 图像识别大赛中提出了基于卷积神经网络(Convolutional Neuro Network, CNN) 结构的AlexNet \cite{NIPS2012_4824} 模型，对ImageNet 数据集上千万级的自然图像进行分类，大幅提升了图像分类精度。AlexNet 的提出首次证明了 CNN 在复杂模型下的有效性，并极大推动了有监督深度学习领域的发展。在2014年 ILSVRC 大赛上，基于 CNN 结构，Google 研究团队提出的 GoogLeNet \cite{szegedy2015going} 和牛津大学学者提出的 VGGNet \cite{simonyan2014very} 分别荣获当年 ImageNet 识别大赛的一、二名。 这两者在 AlexNet 的基础上均探索了网络深度与性能的关系，实验结果也证明了增加网络深度在一定程度上会影响网络最终的性能，使得分类错误率大幅下降。另外，GoogLeNet 中提出的 Inception 结构和 VGGNet 中提出的小卷积核多层网络结构也大幅优化了网络参数的数量，提升了训练学习速度的同时使得网络分类效果更优秀，且具有优秀的扩展泛化能力。之后，何凯明在 ResNet \cite{he2016deep} 网络模型中创造性地提出了残差学习（Residual Learning）的概念，解决了深度学习随着网络层数加深网络退化问题，使得更深层次网络模型得以训练，同时 ResNet 一并刷新了当年 ILSVRC 和 COCO 2015 图像识别大赛的最优记录。在非监督学习领域，深度学习算法模型近十年也发展迅速。2006年， Hinton 对传统自动编码器结构进行改进，提出了深度自编码网络(Deep AutoEncoder, DAE) \cite{hinton2006fast}。DAE 网络利用无监督逐层贪心训练算法完成对隐含层的预训练，然后用 BP 算法对整个网络参数进行调整，显著降低了深层自编码结构的性能指数，且大幅提升自编码器的学习能力。之后，基于 DAE 理论相继提出的栈式自动编码器(stacked AutoEncoder, stacked AE)\cite{bengio2007greedy}、降噪编码器(Denoise Autoencoder, dAE)\cite{vincent2008extracting} 和稀疏自编码器(Sparse AutoEncoder, SAE)\cite{ng2011sparse} 等均取得了不错的效果。2014年，Goodfellow 结合二人零和博弈的思想，创造性地提出了生成对抗网络（Generative Adversarial Net，GAN）\cite{goodfellow2014generative} 模型， 极大地促进了无监督学习和计算机视觉领域（如图片生成、风格迁移和图像分割等）的发展。GAN 模型框架由两个“对抗”模型组成：捕获数据分布的生成模型 G 和估计样本来自训练数据而不是 G 的概率的判别模型 D 。随后，基于GAN 网络的一系列无监督学习方法如 CGAN\cite{mirza2014conditional} 、DCGAN \cite{radford2015unsupervised} 、InfoGAN \cite{chen2016infogan} 和 WGAN \cite{arjovsky2017wasserstein} 等被相继提出，不仅提升 GAN 模型生成与识别精度，同时极大丰富了GAN 网络的应用场景。
+深度学习的概念源于人工神经网络，最早由 Geoffrey Hinton \cite{hinton2006fast} 教授于2006年提出。深度学习通过组合低层特征形成更加抽象的高层表示属性类别或特征，从大量数据中自动学习数据的特征表示。深度学习利用多层网络模型学习抽象概念完成自我学习 \cite{lecun2015deep}。 深度学习最早应用于图像处理领域，目前在自然语言处理语、音识别、搜索推荐、游戏AI 和自动驾驶等领域广泛应用，且均表现出卓越的效果 \cite{bengio2009learning}。2012 年，Alex 等人在ILSVRC 图像识别大赛中提出了基于卷积神经网络(Convolutional Neuro Network, CNN) 结构的AlexNet \cite{NIPS2012_4824} 模型，对ImageNet 数据集上千万级的自然图像进行分类，大幅提升了图像分类精度。AlexNet 的提出首次证明了 CNN 在复杂模型下的有效性，并极大推动了有监督深度学习领域的发展。在2014年 ILSVRC 大赛上，基于 CNN 结构，Google 研究团队提出的 GoogLeNet \cite{szegedy2015going} 和牛津大学学者提出的 VGGNet \cite{simonyan2014very} 分别荣获当年 ImageNet 识别大赛的一、二名。 这两者在 AlexNet 的基础上均探索了网络深度与性能的关系，实验结果也证明了增加网络深度在一定程度上会影响网络最终的性能，使得分类错误率大幅下降。另外，GoogLeNet 中提出的 Inception 结构和 VGGNet 中提出的小卷积核多层网络结构也大幅优化了网络参数的数量，提升了训练学习速度的同时使得网络分类效果更优秀，且具有优秀的扩展泛化能力。之后，何凯明在 ResNet \cite{he2016deep} 网络模型中创造性地提出了残差学习（Residual Learning）的概念，解决了深度学习随着网络层数加深网络退化问题，使得更深层次网络模型得以训练，同时 ResNet 一并刷新了当年 ILSVRC 和 COCO 2015 图像识别大赛的最优记录。在非监督学习领域，深度学习算法模型近十年也发展迅速。2006年， Hinton 对传统自动编码器结构进行改进，提出了深度自编码网络(Deep AutoEncoder, DAE) \cite{hinton2006fast}。DAE 网络利用无监督逐层贪心训练算法完成对隐含层的预训练，然后用 BP 算法对整个网络参数进行调整，显著降低了深层自编码结构的性能指数，且大幅提升自编码器的学习能力。之后，基于 DAE 理论相继提出的栈式自动编码器(stacked AutoEncoder, stacked AE)\cite{bengio2007greedy}、降噪编码器(Denoise Autoencoder, dAE)\cite{vincent2008extracting} 和稀疏自编码器(Sparse AutoEncoder, SAE)\cite{ng2011sparse} 等均取得了不错的效果。2014年，Goodfellow 结合二人零和博弈的思想，创造性地提出了生成对抗网络（Generative Adversarial Network，GAN）\cite{goodfellow2014generative} 模型， 极大地促进了无监督学习和计算机视觉领域（如图片生成、风格迁移和图像分割等）的发展。GAN 模型框架由两个“对抗”模型组成：捕获数据分布的生成模型 G 和估计样本来自训练数据而不是 G 的概率的判别模型 D 。随后，基于GAN 网络的一系列无监督学习方法如 CGAN\cite{mirza2014conditional} 、DCGAN \cite{radford2015unsupervised} 、InfoGAN \cite{chen2016infogan} 和 WGAN \cite{arjovsky2017wasserstein} 等被相继提出，不仅提升 GAN 模型生成与识别精度，同时极大丰富了GAN 网络的应用场景。
 
 由于深度学习在图像分类识别的巨大成功与广泛应用，研究学者逐渐将深度学习理论引入遥感影像分类，基于深度学习理论的研究方法逐渐成为遥感影像发展的下一个趋势。文献 \cite{hu2015transferring} 利用迁移学习知识，首次将深度卷积神经网络应用到高分辨率遥感影像场景分类中，能有效学习影像的高级特征表示。 Marco 等人 \cite{castelluccio2015land} 将预训练的 GoogLeNet 网络参数，迁移到 UC Merced 土地利用数据集 \footnote{数据集访问链接:http://weegee.vision.ucmerced.edu/datasets/landuse.html} 上，文中提出的方法在 UC Merced 数据集上获得了 $10\%$ 的分类识别精度提升，实验结果也表明了 CNN 结构在遥感影像上的成功。 2016年，Romero 等人 \cite{romero2016unsupervised} 使用贪婪分层无监督预训练，结合稀疏表示理论，实现对高分影像土地利用和土地覆盖的无监督分类。 Kampffmeyer 等 \cite{kampffmeyer2016semantic} 则使用 CNN 结构量化遥感影像像素尺度上的不确定性，对图像上每个像素进行分类，完成遥感影像的类别分类和语义分割。 文献 \cite{maggiori2016fully} 基于全卷积网络（Fully convolutional network，FCN）结构，对影像进行四层卷积下采样提取特征，接着四层反卷积对特征图上采样回初始影像分辨率，输出所有像素点类别，实现遥感影像的像素级分类。 U-Net \cite{ronneberger2015u} 网络结合反卷积与跳跃网络的优势，对 FCN 结构加以改进。文献 \cite{li2018deepunet} 基于 U-Net 网络完成对海陆影像水域-陆地分割识别。文献 \cite{zhang2018road} 则在 U-Net 基础上结合残差学习的思想，完成对遥感影像道路信息的提取。
 
