--- a/data/chap05.tex
+++ b/data/chap05.tex
@@ -7,21 +7,21 @@
 \chapter{总结与展望}
 \label{cha:chap05}
 
-
-
-小老鼠偷吃热凉粉；短长虫环绕矮高粱。\footnote{韩愈（768-824），字退之，河南河阳（
-  今河南孟县）人，自称郡望昌黎，世称韩昌黎。幼孤贫刻苦好学，德宗贞元八年进士。曾
-  任监察御史，因上疏请免关中赋役，贬为阳山县令。后随宰相裴度平定淮西迁刑部侍郎，
-  又因上表谏迎佛骨，贬潮州刺史。做过吏部侍郎，死谥文公，故世称韩吏部、韩文公。是
-  唐代古文运动领袖，与柳宗元合称韩柳。诗力求险怪新奇，雄浑重气势。}
-
-
 \section{本文的主要内容}
 \label{sec:5-1}
-封面的例子请参看 cover.tex。主要符号表参看 denation.tex，附录和个人简历分别参看 appendix01.tex
-和 resume.tex。里面的命令都非常简单，一看即会。\footnote{你说还是看不懂？怎么会呢？}
+遥感影像地物分类是遥感研究领域内一个重要问题，如何对地物类别正确识别、明确不同地物边界问题一直是一个研究热点。本文在遥感影像地物分类方面从两个角度提出了现有地物分类方法的改进方法，且对提出的方法分别进行理论推导和实验论证。针对遥感影像数据同物异谱、同谱异物等固有不确定性的特点，设计三角形模糊集值信息表达模型来表征影像数据特征，提出TFSV-IT2FCM 模糊聚类方法用于高分影像的地物无监督聚类分割识别。针对全卷积影像语义分割模糊地物类别的不足，结合CGAN 优秀的图像生成能力，提出基于CGAN 的分割方法来得到清晰、明确的地物分类边界。将文中提出的两种方法分别用于遥感影像地物分类实验中，实验结果均表明相比已有方法，新提出的影像分割方法提高了地物分类的精度，能得到更准确的地物分类边界。具体工作如下：
+\begin{enumerate}[(1)]
+  \item 针对遥感影像数据固有的不确定性，设计三角形模糊集值表达模型提取影像特征。对于新设计的模糊集值模型，提出一种新的区间值度量方法，刻画两个三角形模糊集值间的相似度。利用新提取的数据模型和距离度量方法改进现有面向对象的遥感影像模糊聚类分割方法，提出TFSV-IT2FCM 聚类分割算法。在 SPOT 5和高分二号影像上进行地物聚类分割均证明了文中提出的TFSV-IT2FCM 算法的有效性，其确实能识别近似光谱特征的不同地物，实现更好的分割识别结果。
+  \item 针对全卷积分割方法中上采样特征损失的问题，结合对抗网络的思想，提出基于CGAN 的全卷积语义分割方法。同时，融合正射影像和DSM 高程信息数据用于模型训练。在Vaihingen 影像数据上的实验结果表明新的分割方法能够得到更好的地物分割边界，且同一类别的地物具有更好的空间一致性。
+\end{enumerate}
+
 
 \section{未来的期望}
 \label{sec:5-2}
-
-苏轼（1037-1101），北宋文学家、书画家。字子瞻，号东坡居士，眉州眉山（今属四川）人
+本文提出的两种方法，一定程度上均能改进遥感影像地物分类边界划分问题，对提高影像分类的识别精度有所提高。今后的研究工作还可以从以下几个方面进行探究和改进：
+\begin{enumerate}[(1)]
+  \item  第\ref{cha:chap03} 章提出的模糊聚类分割方法使用最简单的三角形模糊集对数据特征建模，使用其他类型模糊集（如梯形、钟形模糊集）对影像单元建模可以展开进一步的研究。
+  \item  第\ref{cha:chap04} 章提出的基于CGAN 分割方法在识别“车辆”时相对其他几类地物精度较低，原因主要是训练集影像中含有“车辆”的像素点占比较低，后续研究中构建模型目标函数时可以考虑给像素占比低的地物一个较高的权值，研究加权后的交叉熵代价能否提高像素占比小地物的识别效果。
+  \item  第\ref{cha:chap03} 章提出的模糊聚类分割方法能够保证类内地物整体一致，同时能较好的识别不同地物边界，后续工作中可以将该模糊聚类分割方法作为后处理过程添加到第\ref{cha:chap04} 章基于CGAN 分割方法中，期望同类地物内分割效果更好。
+  
+\end{enumerate}
