--- a/data/cover.tex
+++ b/data/cover.tex
@@ -18,34 +18,14 @@
 \cnum{201621210026}
 \cdate{\the\year 年 \the\month 月}
 
-\etitle{An Introduction to \LaTeX{} Thesis Template of Beijing Normal University}
+\etitle{Remote Sensing Image Classification Based on Fuzzy Clustering and Generative Adversarial Network}
 
 % 定义中英文摘要和关键字
 \begin{cabstract}
-  论文的摘要是对论文研究内容和成果的高度概括。摘要应对论文所研究的问题及其研究目
-  的进行描述，对研究方法和过程进行简单介绍，对研究成果和所得结论进行概括。摘要应
-  具有独立性和自明性，其内容应包含与论文全文同等量的主要信息。使读者即使不阅读全
-  文，通过摘要就能了解论文的总体内容和主要成果。
-
-  论文摘要的书写应力求精确、简明。切忌写成对论文书写内容进行提要的形式，尤其要避
-  免“第 1 章……；第 2 章……；……”这种或类似的陈述方式。
-
-  本文介绍北京师范大学论文模板 BNUThesis 的使用方法。本模板是在清华大学学位论文
-  模板 THUThesis 的基础上修改而来，尽可能满足我校的硕士、博士论文格式要求。
-
-  本文的创新点主要有：
-  \begin{itemize}[$\bullet$]
-    \item 用例子来解释模板的使用方法；
-    \item 用废话来填充无关紧要的部分；
-    \item 一边学习摸索一边编写新代码。
-  \end{itemize}
-
-  关键词是为了文献标引工作、用以表示全文主要内容信息的单词或术语。关键词不超过 5
-  个，每个关键词中间用分号分隔。（模板作者注：关键词分隔符不用考虑，模板会自动处
-  理。英文关键词同理。）
+  遥感影像分类是遥感领域重要的研究内容，快速、准确地对遥感影像数据分类与识别是遥感领域当前地研究重点。然而，由于遥感数据固有的不确定性使得影像准确解译识别面临挑战。
 \end{cabstract}
 
-\ckeywords{\TeX, \LaTeX, CJK, 模板, 论文}
+\ckeywords{遥感影像, 地物分类, 模糊聚类, 神经网络, 全卷积网络, 生成对抗网络 }
 
 \begin{eabstract}
    An abstract of a dissertation is a summary and extraction of research work
@@ -67,4 +47,4 @@
    words, with semi-colons used in between to separate one another.
 \end{eabstract}
 
-\ekeywords{\TeX, \LaTeX, CJK, template, thesis}
+\ekeywords{Remote Sensing Images, Land Cover Classification, Fuzzy Clustring, Convolutional Neural Network, Fully Convolutional Network, Generative Adversarial Network}
