--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,7 @@
 \usepackage{graphicx}
 \usepackage{adjustbox}
 \DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
+\usepackage{longtable,pdflscape}
 % 你可以在这里修改配置文件中的定义，导言区可以使用中文。
 % \def\myname{薛瑞尼}
 
